tests/baselines/reference/tsxGenericAttributesType1.errors.txt
file.tsx(14,34): error TS2783: 'x' is specified more than once, so this usage will be overwritten.


==== file.tsx (1 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    const decorator = function <T>(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component {...props}></Component>
    };
    
    const decorator2 = function <T extends { x: number }>(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component {...props} x={2} ></Component>
    };
    
    const decorator3 = function <T extends { x: number }, U extends { x: number } >(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component x={2} {...props} ></Component>
                                     ~~~~~
!!! error TS2783: 'x' is specified more than once, so this usage will be overwritten.
!!! related TS2785 file.tsx:14:40: This spread always overwrites this property.
    };